Created js to append time slots to the DOM. Added event listener for save buttons. Save buttons save text to a variable (local storage later). Added timing logic.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,34 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      
+        <!-- <div class="time-block">
+            <div class="row">
+                <div class="hour">
+
+                </div>
+                <div class="past">
+
+                </div>
+                <div class="saveBtn">
+
+                </div>
+            </div>
+        </div>
+        <div class="time-block">
+            <div class="row">
+                <div class="hour">
+
+                </div>
+                <div class="past">
+
+                </div>
+                <div class="saveBtn">
+
+                </div>
+            </div>
+        </div> -->
+        
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
